add calc_plane_3d_width_and_height and camera_info_callback

--- a/rgbd_plane_detection/CMakeLists.txt
+++ b/rgbd_plane_detection/CMakeLists.txt
@@ -35,6 +35,7 @@ find_package(catkin REQUIRED COMPONENTS
   camera_info_manager
   plane_msgs
   geometry_msgs
+  image_geometry
 )
 
 FIND_PACKAGE(Eigen3 REQUIRED)
