--- a/rgbd_plane_detection/package.xml
+++ b/rgbd_plane_detection/package.xml
@@ -58,6 +58,7 @@
   <build_depend>camera_info_manager</build_depend>
   <build_depend>plane_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>image_geometry</build_depend>
 
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
@@ -66,6 +67,7 @@
   <build_export_depend>camera_info_manager</build_export_depend>
   <build_export_depend>plane_msgs</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
+  <build_export_depend>image_geometry</build_export_depend>
 
   <exec_depend>roscpp</exec_depend>
   <exec_depend>pcl_conversions</exec_depend>
@@ -76,6 +78,7 @@
   <exec_depend>camera_info_manager</exec_depend>
   <exec_depend>plane_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>image_geometry</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
