add calc_plane_normal_ransac. But not fix yet

--- a/rgbd_plane_detection/CMakeLists.txt
+++ b/rgbd_plane_detection/CMakeLists.txt
@@ -36,6 +36,7 @@ find_package(catkin REQUIRED COMPONENTS
   plane_msgs
   geometry_msgs
   image_geometry
+  PCL
 )
 
 FIND_PACKAGE(Eigen3 REQUIRED)
